FEAT: JestとSupertestを追加し、テストスクリプトをpackage.jsonに追加。サーバーの初期化処理を改善し、Cortexクライアントのインスタンス化を修正。

--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "start": "node src/server.js",
-    "dev": "NODE_ENV=development node src/server.js"
+    "dev": "NODE_ENV=development node src/server.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
@@ -15,5 +16,13 @@
   },
   "engines": {
     "node": ">=18"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/test/**/*.test.js"]
   }
 }
