FEAT: APIトークン認証とレートリミッターを追加。セキュリティヘッダーを強化し、WebSocket接続時のトークン検証を実装。クライアント側でのトークン管理を改善。

--- a/server/.env.example
+++ b/server/.env.example
@@ -19,3 +19,9 @@ NODE_TLS_REJECT_UNAUTHORIZED=0
 HOST=0.0.0.0
 PORT=3000
 AUTO_CONNECT=false
+
+# Optional API/WS token (protects /api/* and /ws)
+# If set, clients must send:
+#  - HTTP:  Authorization: Bearer <token>
+#  - WebSocket: ws://host:port/ws?token=<token>
+#API_AUTH_TOKEN=change_me
