--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
+    "helmet": "^7.1.0",
     "ws": "^8.18.0"
   },
   "engines": {
